Revert "first attempt at encoding blockstates"
This reverts commit 9f95331c2fdb72057daf173a9ff7f8fb8adf1600.